[workspace]
members = ["sys"]

[package]
name = "dens"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Rust wrapper for the Density compression library"
homepage = "https://github.com/lyricwulf/density-rs"
repository = "https://github.com/lyricwulf/density-rs"
keywords = ["density", "compression"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
density-sys = "0.1"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "roundtrip"
harness = false
