[package]
name = "density-sys"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Rust bindings for the Density compression library"
homepage = "https://github.com/lyricwulf/density-rs"
repository = "https://github.com/lyricwulf/density-rs"
keywords = ["density", "compression"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.68"
cc = "1"
